# hasp

./: README.md  build-all.sh
.github/workflows/: release.yml
haspd-aksparlnx-dkms/debian/: changelog  control  copyright  haspd-aksparlnx-dkms.dkms  rules
haspd-aksparlnx-dkms/src/: INSTALL  Makefile  README.md  aksparpub.c  aksparpub.h  aksport.h  akstypes.h  api.o_shipped.x86  api.o_shipped.x86_64  build.sh  dkms.conf  fastapi.h  linuxdefs.mk  ppdev.conf  unix_ioctl.h
haspd/DEBIAN/: conffiles  control  postinst  postrm  preinst  prerm
haspd/debian/: changelog  control  copyright  haspd.udev  rules
haspd/etc/haspd/: hasplm.conf
haspd/etc/hasplm/: hasplm.ini  hasplm.ini.example
haspd/etc/init.d/: haspd
haspd/etc/sysconfig/: haspd
haspd/usr/sbin/: usbkeytest
libusb-vhci/: configure.ac
libusb-vhci/debian/: changelog  control  rules
libusb-vhci/examples/: Makefile.am  virtual_device.cpp
libusb-vhci/src/: Makefile.am  hcd.cpp  libusb_vhci.c  libusb_vhci.h  local_hcd.cpp  urb.cpp  work.cpp
usb-vhci-hcd-dkms/debian/: changelog  control  copyright  rules  usb-vhci-hcd-dkms.dkms
usb-vhci-hcd-dkms/src/: Makefile  dkms.conf  usb-vhci-hcd.c  usb-vhci-iocifc.c  usb_vhci.conf
usbhaspd/debian/: changelog  control  copyright  postinst  postrm  preinst  prerm  rules  usbhaspd.dirs
usbhaspd/src/: Makefile  usbhaspd  usbhaspd.conf  usbhaspd.service
usbhaspinfo/debian/: changelog  control  copyright  rules  usbhaspinfo.dirs
usbhaspinfo/src/: CMakeLists.txt  EnumKeys.c  HaspInfo.c  LicStatus.c  Makefile  hasp.h  haspapi.h  nethasp.ini
(+19 files in other folders)
